Fixed bug where pagination added into the width of clientX coordinates. Fix is temporary, since it still doesn't work on mobile.

--- a/src/components/kanjiBox/KanjiBox.css
+++ b/src/components/kanjiBox/KanjiBox.css
@@ -7,6 +7,10 @@
   z-index: 1;
 }
 
+.kanji-box-container {
+  position: relative;
+}
+
 /* Hide scrollbar for webkit browsers (Chrome, Safari) */
 #kanji-box::-webkit-scrollbar {
   display: none;
